@@ -1030,8 +1030,9 @@ class AtomGroup(object):
         elif isinstance(item, (np.ndarray, list)):
             # advanced slicing, requires array or list
             try:
-                if isinstance(item[0], np.bool_):
-                    item = np.arange(len(item))[item]
+                if isinstance(item[0], (bool, np.bool_)):
+                    item = np.asarray(item, dtype=np.bool)
+                    item = np.arange(len(self))[item]
             except IndexError:  # zero length item
                 pass
             return cls([container[i] for i in item])
